[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flexorch-audit"
version = "0.5.0"
description = "Zero-dependency PII + quality + noise audit for LLM datasets (TR/EU/US)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
keywords = ["pii", "privacy", "llm", "dataset", "audit", "tckn", "kvkk", "gdpr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/flexorch/flexorch-audit"
Issues = "https://github.com/flexorch/flexorch-audit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flexorch_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
